tests/baselines/reference/mutuallyRecursiveInference.errors.txt
tests/cases/compiler/mutuallyRecursiveInference.ts(9,5): error TS2610: Property 'a' will overwrite the base property in 'L<X>'. Add a 'declare' modifier or an initializer to avoid this.
tests/cases/compiler/mutuallyRecursiveInference.ts(10,5): error TS2610: Property 'b' will overwrite the base property in 'L<X>'. Add a 'declare' modifier or an initializer to avoid this.


==== tests/cases/compiler/mutuallyRecursiveInference.ts (2 errors) ====
    class T<A> {
        a: A;
        b: any
    }
    class L<RT extends { a: 'a' | 'b', b: any }> extends T<RT[RT['a']]> {
        m() { this.a }
    }
    class X extends L<X> {
        a: 'a' | 'b'
        ~
!!! error TS2610: Property 'a' will overwrite the base property in 'L<X>'. Add a 'declare' modifier or an initializer to avoid this.
        b: number
        ~
!!! error TS2610: Property 'b' will overwrite the base property in 'L<X>'. Add a 'declare' modifier or an initializer to avoid this.
        m2() {
            this.a
        }
    }
    